# Project-NUEVO

./: .gitignore  README.md
TLV protocol/: generate_tlv_types.py
assets/: NUEVO.ai
docs/: README.md
firmware/: README.md  implementation.md
firmware/arduino/: arduino.ino  implementation.md
firmware/arduino/lib/: ICM_20948.cpp  tlvcodec.h
firmware/arduino/src/: MessageCenter.cpp  MessageCenter.h  Scheduler.cpp  Scheduler.h  config.h  pins.h
firmware/tests/test_current_sensing/: test_current_sensing.ino
firmware/tests/test_dc_motor_pid/: test_dc_motor_pid.ino
firmware/tests/test_scheduler/: test_scheduler.ino
firmware/tests/test_uart_tlv/: lib  test_uart_tlv.ino
nuevo_board/: README.md  SPECIFICATIONS.md
nuevo_board/project/: NUEVO board Rev. B.epro
nuevo_ui/: .gitignore  BUGFIXES.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md
nuevo_ui/NUEVO board/: README.md  SPECIFICATIONS.md
nuevo_ui/backend/: package.xml  pyproject.toml  setup.cfg  setup.py
nuevo_ui/backend/nuevo_bridge/: __init__.py  __main__.py  app.py  auth.py  auth_router.py  config.py  message_router.py  payloads.py  ros2_converters.py  ros2_node.py  seal.py  serial_manager.py  ws_manager.py
nuevo_ui/backend/tlvcodec/: __init__.py
nuevo_ui/backend/tlvcodec/docs/: README.md
nuevo_ui/backend/tlvcodec/src/: decoder.py  encoder.py  utils.py
nuevo_ui/backend/tlvcodec/tests/: dataTypes.py  test.py
nuevo_ui/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
nuevo_ui/scripts/: dev.sh
ros2_ws/: README.md
ros2_ws/docker/: Dockerfile.bridge  docker-compose.rpi.yml  docker-compose.vm.yml
ros2_ws/src/: TEST_UART_README.md  test_uart_arduino.py
ros2_ws/test/: i2c_scanner.py  test_uart_arduino.py
(+38 files in other folders)
