[metadata]
name = nuevo_bridge
version = 0.1.0
description = NUEVO Bridge — Arduino ↔ ROS2 ↔ WebSocket serial bridge
author = MAE 162 Staff
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
    fastapi>=0.109.0
    uvicorn[standard]>=0.27.0
    pyserial>=3.5
    PyJWT>=2.8.0
    passlib[bcrypt]>=1.7.4

[options.packages.find]
# Include the bridge package and the bundled TLV codec
include = nuevo_bridge*, tlvcodec*

[options.data_files]
# Register with the ament index so `ros2 pkg list` can find this package
share/ament_index/resource_index/packages =
    resource/nuevo_bridge
share/nuevo_bridge =
    package.xml

[options.entry_points]
console_scripts =
    nuevo_bridge = nuevo_bridge.__main__:main

# ── colcon script path configuration ─────────────────────────────────────────
# Required by ament_python: tells colcon where to install entry-point scripts.
[develop]
script_dir = $base/lib/nuevo_bridge
[install]
install_scripts = $base/lib/nuevo_bridge
